# Finance_AI_Research_Agent

./: .env.example  .gitignore  LICENSE  Procfile  README.md  pyproject.toml  requirements.txt
research_firm/: __init__.py  analysts.py  cli.py  engine.py  market.py  valuation.py  web.py
research_firm/examples/: AAPL.json  NVDA.json
research_firm/web_static/: index.html
tests/: test_engine.py  test_valuation.py  test_web.py
